<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Wizards Duel</string>
    <string name="main_title">Wizards Duel</string>
    
    <string name="settings_shortcut">s</string>
    
    <string name="music_title">Music</string>
    <string name="music_summary">Play Background Music:</string>
    
    <string name="difficulty">Difficulty</string>
    <string name="select">Select a Difficulty:</string>
    <string name="medium_label">Medium</string>
    <string name="easy_label">Easy</string>
    <string name="hard_label">Hard</string>
    <string name="expert_label">Expert</string>
    
    <string name="spell1">Select Your First Spell:</string>
    <string name="spell1title">Spell One</string>
    
    <string name="spell2">Select Your Second Spell:</string>
    <string name="spell2title">Spell Two</string>
    
    <string name="spell3">Select Your Third Spell:</string>
    <string name="spell3title">Spell Three</string>
</resources>
